--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,17 +1,18 @@
-custom:
-    security:
-        authentication:
-            jwt:
-                secret: mysecrettoken
-                token-validity-in-seconds: 600
-                refresh-token-validity-in-seconds: 900
+security:
+    oauth2:
+        resource:
+            id: oauth2_application
+access_token:
+    validity_period: 3600
+refresh_token:
+    validity_period: 10000
 
 spring:
     profiles:
           active: dev
           serialization.indent_output: true
     datasource:
-        url: jdbc:h2:mem:testdb
+        url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=- 1;DB_CLOSE_ON_EXIT=FALSE
         username: sa
         password: sa
         driver-class-name: org.h2.Driver
@@ -19,3 +20,6 @@ spring:
           console:
               enabled: true
               path: /h2-console
+
+server:
+    port: 8090
